--- a/package.json
+++ b/package.json
@@ -9,13 +9,24 @@
     "generate": "nuxt generate"
   },
   "dependencies": {
+    "@nuxtjs/auth-next": "^5.0.0-1648802546.c9880dc",
+    "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.19.3",
     "element-ui": "^2.15.6",
+    "loadash": "^1.0.0",
+    "lodash": "^4.17.21",
+    "md5": "^2.3.0",
     "nuxt": "^2.15.8",
+    "sass": "^1.52.3",
+    "sass-loader": "10",
+    "vform-builds": "^2.2.7",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
+  }
 }
