--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^4.46.0"
   },
   "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   }
