--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "sass-loader": "10",
     "vform-builds": "^2.2.7",
     "vue": "^2.6.14",
+    "vue-gtag": "^2.0.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
-    "@nuxtjs/google-analytics": "^2.4.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   }
