--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "nuxt": "^2.15.8",
     "sass": "^1.52.3",
     "sass-loader": "10",
+    "slash": "^5.1.0",
     "vform-builds": "^2.2.7",
     "vue": "^2.6.14",
     "vue-gtag": "^1.16.1",
