--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "loadash": "^1.0.0",
     "lodash": "^4.17.21",
     "md5": "^2.3.0",
-    "nuxt": "^2.15.8",
+    "nuxt": "2",
     "sass": "^1.52.3",
     "sass-loader": "10",
     "slash": "^5.1.0",
@@ -26,6 +26,7 @@
     "vue-gtag": "^1.16.1",
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
+    "vuex": "2",
     "webpack": "^4.46.0"
   },
   "devDependencies": {
