--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "vue-server-renderer": "^2.6.14",
     "vue-template-compiler": "^2.6.14",
     "vuex": "2",
-    "webpack": "^4.46.0"
+    "webpack": "^4.46.0",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "pug": "^3.0.2",
