--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,11 +27,11 @@ jobs:
     - uses: docker/login-action@v3
       with:
         registry: ghcr.io
-        username: jaredanjerry
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.HUB_GITHUB_TOKEN }}
 
     - name: Build and push student
       working-directory: .
       run: |
-        docker build . --file Dockerfile --tag ghcr.io/jaredanjerry/rmmt-student:latest
-        docker push ghcr.io/jaredanjerry/rmmt-student:latest
+        docker build . --file Dockerfile --tag ghcr.io/${{ secrets.DOCKER_USERNAME }}/rmmt-student:latest
+        docker push ghcr.io/${{ secrets.DOCKER_USERNAME }}/rmmt-student:latest
