--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,12 +26,11 @@ jobs:
 
     - uses: docker/login-action@v3
       with:
-        registry: ghcr.io
         username: ${{ vars.DOCKER_USERNAME }}
-        password: ${{ secrets.HUB_GITHUB_TOKEN }}
+        password: ${{ secrets.DOCKER_PAT_TOKEN }}
 
     - name: Build and push student
       working-directory: .
       run: |
-        docker build . --file Dockerfile --tag ghcr.io/${{ vars.DOCKER_USERNAME }}/rmmt-student:latest
-        docker push ghcr.io/${{ vars.DOCKER_USERNAME }}/rmmt-student:latest
+        docker build . --file Dockerfile --tag ${{ vars.DOCKER_USERNAME }}/rmmt-student:latest
+        docker push ${{ vars.DOCKER_USERNAME }}/rmmt-student:latest
