--- a/nginx.conf
+++ b/nginx.conf
@@ -53,11 +53,16 @@ http {
 
         # API代理到后端服务
         location /api/ {
-            proxy_pass https://rmmt-api.default.svc.cluster.local/api/;
+            proxy_pass http://rmmt-api.rmmt.svc.cluster.local:5000/api/;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # 超时设置
+            proxy_connect_timeout 30s;
+            proxy_send_timeout 30s;
+            proxy_read_timeout 30s;
         }
 
         # SPA路由处理 - 所有其他请求都返回index.html
