--- a/nginx.conf
+++ b/nginx.conf
@@ -53,7 +53,7 @@ http {
 
         # API代理到后端服务
         location /api/ {
-            proxy_pass http://rmmt-api.rmmt.svc.cluster.local:5000/api/;
+            proxy_pass http://rmmt-api.rmmt.svc.cluster.local:80/api/; # 可能需要修改 
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -75,6 +75,5 @@ http {
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
     }
 }
